src/test/resources/regression/frontends/error/simple/ConvertBigInt.scala
/* Copyright 2009-2016 EPFL, Lausanne */

object ConvertBigInt {

  def safeInt(x: Int): BigInt = x

}
